fix gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -98,7 +98,6 @@ img {
 .header-ul {
   display: flex;
   gap: 40px;
-  padding: 24px 0;
 }
 
 .header-nav-item {
@@ -508,7 +507,6 @@ img {
 
 .footer-cont {
   display: flex;
-  gap: 120px;
   justify-content: left;
   align-items: baseline;
 }
@@ -539,4 +537,20 @@ img {
   left: 50%;
   transform: translate(-50%, -50%);
   fill: #f4f4fd;
+}
+
+.modal-overlay {
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  pointer-events: none;
+  transition: 250ms ease-in-out;
 }
